fixing spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -225,13 +225,14 @@ br { clear:both; }
 .title
 {
   border: 0; padding: 0; margin: 0;
-  margin-top: 200px;
-  margin-bottom: 200px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .title h1 {
   color: #333;
   font-size: 60px;
+  font-weight: 300;
   //font-weight: bold;
   text-align: center;
   border: 0; padding: 0; margin: 0;
@@ -346,7 +347,7 @@ hr {
     margin-top: 0px;
     margin-bottom: 0px;
     border: 0;
-    border-top: 1.5px solid #888;
+    border-top: 1.5px solid #aaa;
     /*margin: 1em 0;*/
     padding: 0; 
 }
